--- a/Project_Paper/refs.bib
+++ b/Project_Paper/refs.bib
@@ -78,3 +78,14 @@
   year={2010}
 }
 
+@article{chang2011libsvm,
+  title={LIBSVM: A library for support vector machines},
+  author={Chang, Chih-Chung and Lin, Chih-Jen},
+  journal={ACM Transactions on Intelligent Systems and Technology (TIST)},
+  volume={2},
+  number={3},
+  pages={27},
+  year={2011},
+  publisher={ACM}
+}
+
