add two items in reference

--- a/Project_Paper/refs.bib
+++ b/Project_Paper/refs.bib
@@ -1,91 +1,107 @@
-@InProceedings{C2,
-  author = 	 "Jones, C.D. and Smith, A.B. and Roberts, E.F.",
-  title =        "Article Title",
-  booktitle =        "Proceedings Title",
-  organization = "IEEE",
-  year = 	 "2003",
-  volume = 	 "II",
-  pages = 	 "803-806"
-}
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
+
+%% Created for Music Technology at 2015-12-06 20:30:18 -0500 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@webpage{digital7website,
+	Date-Added = {2015-12-07 01:29:14 +0000},
+	Date-Modified = {2015-12-07 01:30:18 +0000},
+	Keywords = {API Documentation of Digital7},
+	Lastchecked = {Dec 6th, 2015},
+	Month = {Dec},
+	Url = {http://docs.7digital.com/},
+	Year = {2015}}
+
+@inproceedings{C2,
+	Author = {Jones, C.D. and Smith, A.B. and Roberts, E.F.},
+	Booktitle = {Proceedings Title},
+	Organization = {IEEE},
+	Pages = {803-806},
+	Title = {Article Title},
+	Volume = {II},
+	Year = {2003}}
 
 @article{tzanetakis2002musical,
-  title={Musical genre classification of audio signals},
-  author={Tzanetakis, George and Cook, Perry},
-  journal={Speech and Audio Processing, IEEE transactions on},
-  volume={10},
-  number={5},
-  pages={293--302},
-  year={2002},
-  publisher={IEEE}
-}
+	Author = {Tzanetakis, George and Cook, Perry},
+	Journal = {Speech and Audio Processing, IEEE transactions on},
+	Number = {5},
+	Pages = {293--302},
+	Publisher = {IEEE},
+	Title = {Musical genre classification of audio signals},
+	Volume = {10},
+	Year = {2002}}
 
 @article{sturm2013gtzan,
-  title={The GTZAN dataset: Its contents, its faults, their effects on evaluation, and its future use},
-  author={Sturm, Bob L},
-  journal={arXiv preprint arXiv:1306.1461},
-  year={2013}
-}
+	Author = {Sturm, Bob L},
+	Journal = {arXiv preprint arXiv:1306.1461},
+	Title = {The GTZAN dataset: Its contents, its faults, their effects on evaluation, and its future use},
+	Year = {2013}}
 
 @misc{diab1musical,
-  title={Musical Genre Tag Classification With Curated and Crowdsourced Datasets},
-  author={Diab, Omar and Manero, Anthony and Watson, Reid},
-  publisher={Stanford University, Computer Science}
-}
+	Author = {Diab, Omar and Manero, Anthony and Watson, Reid},
+	Publisher = {Stanford University, Computer Science},
+	Title = {Musical Genre Tag Classification With Curated and Crowdsourced Datasets}}
 
 @inproceedings{mandel2005song,
-  title={Song-level features and support vector machines for music classification},
-  author={Mandel, Michael I and Ellis, Daniel PW},
-  booktitle={ISMIR 2005: 6th International Conference on Music Information Retrieval: Proceedings: Variation 2: Queen Mary, University of London \& Goldsmiths College, University of London, 11-15 September, 2005},
-  pages={594--599},
-  year={2005},
-  organization={Queen Mary, University of London}
-}
+	Author = {Mandel, Michael I and Ellis, Daniel PW},
+	Booktitle = {ISMIR 2005: 6th International Conference on Music Information Retrieval: Proceedings: Variation 2: Queen Mary, University of London \& Goldsmiths College, University of London, 11-15 September, 2005},
+	Organization = {Queen Mary, University of London},
+	Pages = {594--599},
+	Title = {Song-level features and support vector machines for music classification},
+	Year = {2005}}
 
 @inproceedings{li2003comparative,
-  title={A comparative study on content-based music genre classification},
-  author={Li, Tao and Ogihara, Mitsunori and Li, Qi},
-  booktitle={Proceedings of the 26th annual international ACM SIGIR conference on Research and development in informaion retrieval},
-  pages={282--289},
-  year={2003},
-  organization={ACM}
-}
+	Author = {Li, Tao and Ogihara, Mitsunori and Li, Qi},
+	Booktitle = {Proceedings of the 26th annual international ACM SIGIR conference on Research and development in informaion retrieval},
+	Organization = {ACM},
+	Pages = {282--289},
+	Title = {A comparative study on content-based music genre classification},
+	Year = {2003}}
 
 @article{leichtentritt1945aesthetic,
-  title={Aesthetic ideas as the basis of musical styles},
-  author={Leichtentritt, Hugo},
-  journal={The Journal of Aesthetics and Art Criticism},
-  volume={4},
-  number={2},
-  pages={65--73},
-  year={1945},
-  publisher={JSTOR}
-}
+	Author = {Leichtentritt, Hugo},
+	Journal = {The Journal of Aesthetics and Art Criticism},
+	Number = {2},
+	Pages = {65--73},
+	Publisher = {JSTOR},
+	Title = {Aesthetic ideas as the basis of musical styles},
+	Volume = {4},
+	Year = {1945}}
 
 @incollection{dannenberg2010style,
-  title={Style in music},
-  author={Dannenberg, Roger B},
-  booktitle={The structure of style},
-  pages={45--57},
-  year={2010},
-  publisher={Springer}
-}
+	Author = {Dannenberg, Roger B},
+	Booktitle = {The structure of style},
+	Pages = {45--57},
+	Publisher = {Springer},
+	Title = {Style in music},
+	Year = {2010}}
 
 @inproceedings{seyerlehner2010fusing,
-  title={Fusing block-level features for music similarity estimation},
-  author={Seyerlehner, Klaus and Widmer, Gerhard and Pohle, Tim},
-  booktitle={Proc. of the 13th Int. Conference on Digital Audio Effects (DAFx-10)},
-  pages={225--232},
-  year={2010}
-}
+	Author = {Seyerlehner, Klaus and Widmer, Gerhard and Pohle, Tim},
+	Booktitle = {Proc. of the 13th Int. Conference on Digital Audio Effects (DAFx-10)},
+	Pages = {225--232},
+	Title = {Fusing block-level features for music similarity estimation},
+	Year = {2010}}
 
 @article{chang2011libsvm,
-  title={LIBSVM: A library for support vector machines},
-  author={Chang, Chih-Chung and Lin, Chih-Jen},
-  journal={ACM Transactions on Intelligent Systems and Technology (TIST)},
-  volume={2},
-  number={3},
-  pages={27},
-  year={2011},
-  publisher={ACM}
-}
+	Author = {Chang, Chih-Chung and Lin, Chih-Jen},
+	Journal = {ACM Transactions on Intelligent Systems and Technology (TIST)},
+	Number = {3},
+	Pages = {27},
+	Publisher = {ACM},
+	Title = {LIBSVM: A library for support vector machines},
+	Volume = {2},
+	Year = {2011}}
 
+@inproceedings{bertin2011million,
+	Author = {Bertin-Mahieux, Thierry and Ellis, Daniel PW and Whitman, Brian and Lamere, Paul},
+	Booktitle = {ISMIR 2011: Proceedings of the 12th International Society for Music Information Retrieval Conference, October 24-28, 2011, Miami, Florida},
+	Organization = {University of Miami},
+	Pages = {591--596},
+	Title = {The million song dataset},
+	Year = {2011}}
